Merged FILE-FOLDER-API (5.2.0) to HEAD (5.2)    120603 jkaabimofrad: FileFolder API – cleanup + minor modification to satisfy the IDEA's code analysis.
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/alfresco/HEAD/root@126392 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261